# yura

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  db.py  main.py  models.py  templating.py
app/routers/: analysis.py  repos.py  settings.py
app/services/: analysis.py  charts.py  git_service.py  llm.py  models_service.py  progress.py  settings_store.py  static_analysis.py
app/static/css/: app.css
app/templates/: base.html  branches.html  index.html  repo.html  report.html  running.html  settings.html
arxiv/: fetch.py  improvement-plan.html  index.md  manifest.json  rerank.py
