[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yura"
version = "0.1.0"
description = "Git developer-performance intelligence — rank contributors with LLM-judged commit analysis and McKinsey-style reports"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Sensium AI" }]
keywords = ["git", "code-review", "developer-analytics", "llm", "fastapi"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Version Control :: Git",
    "Intended Audience :: Developers",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "anthropic>=0.42.0",
    "openai>=1.59.0",
]

[project.urls]
Homepage = "https://github.com/sensiumai/yura"
Repository = "https://github.com/sensiumai/yura"

[tool.hatch.build.targets.wheel]
packages = ["app"]
